--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="img/111.jpg" alt="logo wood wall">
+            <img src="img/silver-wooden-walls.jpg" alt="Срібна дерев'яна стіна">
             <ul class="menu">
                 <li> <a href="#Що я роблю">Що я роблю</a> </li>
                 <li> <a href="#Про мене">Про мене</a> </li>
@@ -71,13 +71,14 @@
         <p>від 2000 грн</p>
 
 
-</main>
+    </main>
     <footer>
-<h3 id=Контакти></h3>
-<h4>Phone number</h4>
-<p>+38(097)6538113</p>
-<h5>E-mail</h5>
-<p>Nazariy.Kovalyk@gmail.com</p>
+        <h3 id=Контакти></h3>
+        <h4>Phone number</h4>
+        <p>+38(097)6538113</p>
+        <h5>E-mail</h5>
+        <p>Nazariy.Kovalyk@gmail.com</p>
     </footer>
+</body>
 
 </html>
