Change title and foto

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <nav>
             <img src="img/silver-wooden-walls.jpg" alt="Срібна дерев'яна стіна">
             <ul class="menu">
-                <li> <a href="#Що я роблю">Що я роблю</a> </li>
-                <li> <a href="#Про мене">Про мене</a> </li>
-                <li> <a href="#Проекти">Проекти</a> </li>
-                <li> <a href="#Ціни">Ціни</a> </li>
-                <li> <a href="#Контакти">Контакти</a> </li>
+                <li> <a href="#What-I-do">Що я роблю</a> </li>
+                <li> <a href="#About-me">Про мене</a> </li>
+                <li> <a href="#My-projects">Проекти</a> </li>
+                <li> <a href="#Prices">Ціни</a> </li>
+                <li> <a href="#Contacts">Контакти</a> </li>
             </ul>
 
         </nav>
@@ -28,7 +28,7 @@
 
     </header>
     <main>
-        <h3 id="Що я роблю">Чим я займаюсь</h3>
+        <h3 id="What-I-do">Чим я займаюсь</h3>
         <p>Я дуже люблю дерево, як матеріал. Тому я вирішив працювати тільки з ним. Це не проста робота, але я знаю як
             зробити так, щоб декор ваших стін змусив ваших гостей бути в захваті!</p>
         <article>
@@ -44,21 +44,21 @@
             <h4>Виконання проекту</h4>
             <p>В найкоротші терміни я монтую дерев'яні дошки чи інший матеріал і наношу покриття.</p>
         </article>
-        <h3 id="Про мене">...про мене...</h3>
-        <img src="img/333.jpg" alt="Logo light brown wall">
+        <h3 id="About-me">...про мене...</h3>
+        <img src="img/original-wooden-wall.jpg" alt="Натурального кольору дерев'яна стіна">
         <h4>Привіт всім! Мене звуть Назарій Ковалик і я гордо можу називатись майстром по дереву!</h4>
         <p>Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
             мене це вабило. Сьогодні я займаюсь креативним збагаченням вашого житла за допомогою планерних дощок, фанери
             або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!</p>
-        <h3 id="Проекти"> Мої проекти</h3>
+        <h3 id="My-projects"> Мої проекти</h3>
         <p>Ось кілька моїх проектів...</p>
-        <img src="img/222.jpg" alt="Проект стіни 1">
-        <img src="img/20210303_130005.jpg" alt="Проект стіни 2. Біла кладка">
-        <img src="img/20210303_125943.jpg" alt="Проект стіни 3. Біло-коричнева кладка">
-        <img src="img/123.jpg" alt="Проект стіни 4. Сіра стара кладка">
-        <img src="img/maxresdefault.jpg" alt="Проект стіни 5. Дорога кладка">
-        <img src="img/444.jpg" alt="Проект стіни 6. Кольорова стара кладка">
-        <h3 id=Ціни>Прайс</h3>
+        <img src="img/wooden-wall-different-color.jpg" alt="Проект стіни 1">
+        <img src="img/project-white.jpg" alt="Проект стіни 2. Біла кладка">
+        <img src="img/project-white-brown.jpg" alt="Проект стіни 3. Біло-коричнева кладка">
+        <img src="img/old-wall.jpg" alt="Проект стіни 4. Сіра стара кладка">
+        <img src="img/old-rustic-wall.jpg" alt="Проект стіни 5. Дорога кладка">
+        <img src="img/rustic-wood.jpg" alt="Проект стіни 6. Кольорова стара кладка">
+        <h3 id="Prices">Прайс</h3>
         <h4>Наведена цінова політика, яка зазвичай обговорюється з клієнтом!</h4>
         <ul>
             <li>Безкоштовний виїзд і консультація;</li>
@@ -70,10 +70,10 @@
         <h5>Повний проект</h5>
         <p>від 2000 грн</p>
 
-
     </main>
+
     <footer>
-        <h3 id=Контакти></h3>
+        <h3 id="Contacts">Контакти</h3>
         <h4>Phone number</h4>
         <p>+38(097)6538113</p>
         <h5>E-mail</h5>
