--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Назарій Ковалик</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -21,9 +22,8 @@
 
         </nav>
         <div class="banner">
-            <h1>Назарій Ковалик</h1>
-            <h2>Майстер по дереву</h2>
-            <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести!"</p>
+            <h1>Назарій Ковалик - майстер по дереву</h1>
+                    <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести!"</p>
         </div>
 
     </header>
@@ -47,7 +47,7 @@
         <h3 id="About-me">...про мене...</h3>
         <img src="img/original-wooden-wall.jpg" alt="Натурального кольору дерев'яна стіна">
         <h4>Привіт всім! Мене звуть Назарій Ковалик і я гордо можу називатись майстром по дереву!</h4>
-        <p>Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
+        <p>  Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
             мене це вабило. Сьогодні я займаюсь креативним збагаченням вашого житла за допомогою планерних дощок, фанери
             або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!</p>
         <h3 id="My-projects"> Мої проекти</h3>
@@ -76,7 +76,7 @@
         <h3 id="Contacts">Контакти</h3>
         <h4>Phone number</h4>
         <p>+38(097)6538113</p>
-        <h5>E-mail</h5>
+        <h4>E-mail</h4>
         <p>Nazariy.Kovalyk@gmail.com</p>
     </footer>
 </body>
