Changes and fotos

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Назарій Ковалик</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="img/wooden-wall-different-color.jpg"
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <nav>
-            <img src="img/silver-wooden-walls.jpg" alt="Срібна дерев'яна стіна">
+            <IMG class="logo" src="img/silver-wooden-walls.jpg" alt="Срібна дерев'яна стіна">
+            <label class="burger-icon" for="burger-checkbox">☰</label>
+            <input type="checkbox" id="burger-checkbox">
             <ul class="menu">
                 <li> <a href="#What-I-do">Що я роблю</a> </li>
                 <li> <a href="#About-me">Про мене</a> </li>
@@ -19,11 +22,10 @@
                 <li> <a href="#Prices">Ціни</a> </li>
                 <li> <a href="#Contacts">Контакти</a> </li>
             </ul>
-
         </nav>
         <div class="banner">
             <h1>Назарій Ковалик - майстер по дереву</h1>
-                    <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести!"</p>
+                    <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести. Я знаю як створити затишний проект для вашого інтер'єру. Бо саме дерево являється дуже благородним матеріалом, яке здавна використовується при оздобленні будинків"</p>
         </div>
 
     </header>
@@ -77,7 +79,7 @@
         <h4>Phone number</h4>
         <p>+38(097)6538113</p>
         <h4>E-mail</h4>
-        <p>Nazariy.Kovalyk@gmail.com</p>
+        <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com<a/></p>
     </footer>
 </body>
 
