--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Назарій Ковалик</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="img/wooden-wall-different-color.jpg"
-</head>
+    <link rel="icon" href="img/wooden-wall-different-color.jpg" </head>
 
 <body>
     <header id="home">
@@ -25,7 +24,9 @@
         </nav>
         <div class="banner">
             <h1>Назарій Ковалик - майстер по дереву</h1>
-                    <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести. Я знаю як створити затишний проект для вашого інтер'єру. Бо саме дерево являється дуже благородним матеріалом, яке здавна використовується при оздобленні будинків"</p>
+            <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести. Я знаю як створити затишний проект
+                для вашого інтер'єру. Бо саме дерево являється дуже благородним матеріалом, яке здавна використовується
+                при оздобленні будинків"</p>
         </div>
 
     </header>
@@ -34,24 +35,35 @@
         <p>Я дуже люблю дерево, як матеріал. Тому я вирішив працювати тільки з ним. Це не проста робота, але я знаю як
             зробити так, щоб декор ваших стін змусив ваших гостей бути в захваті!</p>
         <article>
-            <h4>Створення дизайну</h4>
-            <p>На початковому етапі я розробляю і пропоную на вибір клієнта кілька варіантів дизайну стіни.</p>
+            <div class="image">
+                <img src="img/model.jpg">
+                <p>Створення дизайну. На початковому етапі я розробляю і пропоную на вибір клієнта кілька
+                    варіантів дизайну стіни</p>
+                <p></p>
+            </div>
         </article>
         <article>
-            <h4>Підбір деревини та матеріалів для нанесення</h4>
-            <p>Важливий крок - це вибір сорту деревини і матеріалів, що в подальшому будуть окрасою для стін. Перевагою
-                є екологічність таких.</p>
+            <div class="image">
+               <img src="img/model.jpg">
+                <p>Підбір деревини та матеріалів для нанесення. Важливий крок - це вибір сорту деревини і матеріалів, що в подальшому будуть окрасою для
+                 стін. Перевагою є екологічність таких</p>
+            </div>
         </article>
         <article>
-            <h4>Виконання проекту</h4>
-            <p>В найкоротші терміни я монтую дерев'яні дошки чи інший матеріал і наношу покриття.</p>
+            <div class="image">
+                <img src="img/model.jpg">
+                <p>Виконання проекту. В найкоротші терміни я монтую дерев'яні дошки чи інший матеріал і наношу покриття</p>
+            </div>
         </article>
         <h3 id="About-me">...про мене...</h3>
-        <img src="img/original-wooden-wall.jpg" alt="Натурального кольору дерев'яна стіна">
+        <img src="img/original-wooden-wall.jpg" alt="Натурального кольору дерев'яна стіна" />
         <h4>Привіт всім! Мене звуть Назарій Ковалик і я гордо можу називатись майстром по дереву!</h4>
-        <p>  Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
+        <br>
+        <p> Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
             мене це вабило. Сьогодні я займаюсь креативним збагаченням вашого житла за допомогою планерних дощок, фанери
-            або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!</p>
+            або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!
+            </br>
+
         <h3 id="My-projects"> Мої проекти</h3>
         <p>Ось кілька моїх проектів...</p>
         <img src="img/wooden-wall-different-color.jpg" alt="Проект стіни 1">
@@ -67,9 +79,11 @@
             <li>Розграфлення картинки до початку робіт;</li>
             <li>Знижка на великі проекти!</li>
         </ul>
-        <h5>Часткове оздоблення</h5>
+        <img src="img/model.jpg">
+        <p>Часткове оздоблення</p>
         <p>300 грн/м</p>
-        <h5>Повний проект</h5>
+        <img src="img/model.jpg">
+        <p>Повний проект<p>
         <p>від 2000 грн</p>
 
     </main>
@@ -79,7 +93,7 @@
         <h4>Phone number</h4>
         <p>+38(097)6538113</p>
         <h4>E-mail</h4>
-        <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com<a/></p>
+        <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com<a /></p>
     </footer>
 </body>
 
