--- a/index.html
+++ b/index.html
@@ -31,69 +31,85 @@
 
     </header>
     <main>
-        <h3 id="What-I-do">Чим я займаюсь</h3>
+        <h2 id="What-I-do">Чим я займаюсь</h2>
         <p>Я дуже люблю дерево, як матеріал. Тому я вирішив працювати тільки з ним. Це не проста робота, але я знаю як
             зробити так, щоб декор ваших стін змусив ваших гостей бути в захваті!</p>
-        <article>
-            <div class="image">
-                <img src="img/model.jpg">
-                <p>Створення дизайну. На початковому етапі я розробляю і пропоную на вибір клієнта кілька
+        <div class="box">
+            <article class="card">
+                <p class="card-title">Створення дизайну</p>
+                <p>На початковому етапі я розробляю і пропоную на вибір клієнта кілька
                     варіантів дизайну стіни</p>
-                <p></p>
+            </article>
+            <article class="card">
+                <p class="card-title">Підбір деревини та матеріалів для нанесення</p>
+                <p>Важливий крок - це вибір сорту деревини і матеріалів, що в подальшому будуть окрасою для
+                    стін. Перевагою є екологічність таких</p>
+            </article>
+            <article class="card">
+                <p class="card-title">Виконання проекту</p>
+                <p>В найкоротші терміни я монтую дерев'яні дошки чи інший матеріал і наношу покриття</p>
+            </article>
+        </div>
+        <div class="box">
+            <div class="wooden-wall">
             </div>
-        </article>
-        <article>
-            <div class="image">
-               <img src="img/model.jpg">
-                <p>Підбір деревини та матеріалів для нанесення. Важливий крок - це вибір сорту деревини і матеріалів, що в подальшому будуть окрасою для
-                 стін. Перевагою є екологічність таких</p>
+            <div>
+                <h2 id="About-me">...про мене...</h2>
+                <div class="greeting">Привіт всім! Мене звуть Назарій Ковалик і я гордо можу називатись майстром по
+                    дереву!
+                </div>
+                <p> Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні.
+                    Змалку
+                    мене це вабило. Сьогодні я займаюсь креативним збагаченням вашого житла за допомогою планерних
+                    дощок, фанери
+                    або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!
+                </p>
             </div>
-        </article>
-        <article>
-            <div class="image">
-                <img src="img/model.jpg">
-                <p>Виконання проекту. В найкоротші терміни я монтую дерев'яні дошки чи інший матеріал і наношу покриття</p>
-            </div>
-        </article>
-        <h3 id="About-me">...про мене...</h3>
-        <img src="img/original-wooden-wall.jpg" alt="Натурального кольору дерев'яна стіна" />
-        <h4>Привіт всім! Мене звуть Назарій Ковалик і я гордо можу називатись майстром по дереву!</h4>
-        <br>
-        <p> Коли я був малим хлопчиськом, то завжди вдивлявся в красу обробки деревини на верстатах в майстерні. Змалку
-            мене це вабило. Сьогодні я займаюсь креативним збагаченням вашого житла за допомогою планерних дощок, фанери
-            або з іншого матеріалу. Мені це подобається і вважаю, що я успішний в даній сфері!
-            </br>
-
-        <h3 id="My-projects"> Мої проекти</h3>
+        </div>
+        <h2 id="My-projects"> Мої проекти</h2>
         <p>Ось кілька моїх проектів...</p>
-        <img src="img/wooden-wall-different-color.jpg" alt="Проект стіни 1">
-        <img src="img/project-white.jpg" alt="Проект стіни 2. Біла кладка">
-        <img src="img/project-white-brown.jpg" alt="Проект стіни 3. Біло-коричнева кладка">
-        <img src="img/old-wall.jpg" alt="Проект стіни 4. Сіра стара кладка">
-        <img src="img/old-rustic-wall.jpg" alt="Проект стіни 5. Дорога кладка">
-        <img src="img/rustic-wood.jpg" alt="Проект стіни 6. Кольорова стара кладка">
-        <h3 id="Prices">Прайс</h3>
-        <h4>Наведена цінова політика, яка зазвичай обговорюється з клієнтом!</h4>
-        <ul>
-            <li>Безкоштовний виїзд і консультація;</li>
-            <li>Розграфлення картинки до початку робіт;</li>
-            <li>Знижка на великі проекти!</li>
-        </ul>
-        <img src="img/model.jpg">
-        <p>Часткове оздоблення</p>
-        <p>300 грн/м</p>
-        <img src="img/model.jpg">
-        <p>Повний проект<p>
-        <p>від 2000 грн</p>
-
+        <div class="gallery">
+            <img class="large-image" src="img/wooden-wall-different-color.jpg" alt="Проект стіни 1">
+            <img src="img/project-white.jpg" alt="Проект стіни 2. Біла кладка">
+            <img src="img/project-white-brown.jpg" alt="Проект стіни 3. Біло-коричнева кладка">
+            <img src="img/old-wall.jpg" alt="Проект стіни 4. Сіра стара кладка">
+            <img class="large-image" src="img/rustic-wood.jpg" alt="Проект стіни 6. Кольорова стара кладка">
+            <img src="img/old-rustic-wall.jpg" alt="Проект стіни 5. Дорога кладка">
+        </div>
+        <div class="box">
+            <div>
+                <h2 id="Prices">Прайс</h2>
+                <p>Наведена цінова політика, яка зазвичай обговорюється з клієнтом!</p>
+                <ul class="list">
+                    <li>Безкоштовний виїзд і консультація;</li>
+                    <li>Розграфлення картинки до початку робіт;</li>
+                    <li>Знижка на великі проекти!</li>
+                </ul>
+            </div>
+            <div class="card">
+                <p class="card-title">Часткове оздоблення</p>
+                <p class="card-title">300 грн/м</p>
+            </div>
+            <div class="card">
+                <p class="card-title">Повний проект</p>
+                <p class="card-title">від 2000 грн</p>
+            </div>
+        </div>
     </main>
-
     <footer>
-        <h3 id="Contacts">Контакти</h3>
-        <h4>Phone number</h4>
-        <p>+38(097)6538113</p>
-        <h4>E-mail</h4>
-        <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com<a /></p>
+        <h2 id="Contacts">Контакти</h2>
+        <div class="box">
+            <div>
+                <h3>Phone number</h3>
+                <p><a href="tel:+380976538113">+38(097)653 81 13</a></p>
+            </div>
+            <div>
+                <h3>E-mail</h3>
+                <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com</a></p>
+            </div>
+        </div>
+
+
     </footer>
 </body>
 
