--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
                 <li> <a href="#Prices">Ціни</a> </li>
                 <li> <a href="#Contacts">Контакти</a> </li>
             </ul>
-        </nav>
+            <div class="clock"></div>
+            <div class="audio-track">
+                <audio id="audio" src="./audio/treck1.mp3"></audio>
+                <div id="controls"><div class="time"></div></div>       
+                <button class="play">Play</button>
+                <button class="pause">Pause</button>
+                <button class="prev">&#60;Prev</button>
+                <button class="next">Next&#62;</button>
+        </div>
+    </nav>
         <div class="banner">
-            <h1>Назарій Ковалик - майстер по дереву</h1>
-            <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести. Я знаю як створити затишний проект
-                для вашого інтер'єру. Бо саме дерево являється дуже благородним матеріалом, яке здавна використовується
-                при оздобленні будинків"</p>
+        <h1>Назарій Ковалик - майстер по дереву</h1>
+        <p>"Ваші стіни можуть сяяти по новому, якщо ви дозволите мені це довести. Я знаю як створити затишний проект
+            для вашого інтер'єру. Бо саме дерево являється дуже благородним матеріалом, яке здавна використовується
+            при оздобленні будинків"</p>
         </div>
 
     </header>
@@ -101,16 +110,18 @@
         <div class="box">
             <div>
                 <h3>Phone number</h3>
-                <p><a href="tel:+380976538113">+38(097)653 81 13</a></p>
+                <p><a href="tel:+380976538113">+38 (097) 653 81 13</a></p>
             </div>
             <div>
-                <h3>E-mail</h3>
+                <h3>E-MAIL</h3>
                 <p><a href="mailto:Nazariy.Kovalyk@gmail.com">Nazariy.kovalyk@gmail.com</a></p>
             </div>
         </div>
 
 
     </footer>
+    <script src="js/index.js"></script>
+    <script src="js/player.js"></script>
 </body>
 
 </html>
